roles/k8s-master/files/manifests/user/public/lastfm-thing.yml
kind: Deployment
apiVersion: apps/v1beta2
metadata:
  name: lastfm-thing
  namespace: public
  labels:
    app: lastfm-thing
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lastfm-thing
  template:
    metadata:
      labels:
        app: lastfm-thing
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/underyx/lastfm-thing:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              port: 8080
              path: /sample
            initialDelaySeconds: 30
            periodSeconds: 30
---
kind: Service
apiVersion: v1
metadata:
  name: lastfm-thing-svc
  namespace: public
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lastfm-thing
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lastfm-thing-ingress
  namespace: public
  annotations:
    nginx.ingress.kubernetes.io/proxy-next-upstream-tries: "3"
spec:
  rules:
    - host: lastfm-thing.underyx.me
      http:
        paths:
          - backend:
              serviceName: lastfm-thing-svc
              servicePort: 8080
            path: /
  tls:
    - hosts:
        - lastfm-thing.underyx.me
      secretName: lastfm-thing-tls
